# coupling-the-single_th-and-NK

./: NEWMESH001
DAISY-git/git/: CMakeLists.txt
DAISY-git/git/IMPC(assm with subroutine)/: IMP_driving_output.f90  IMP_driving_pre_process.f90  IMP_mathkerel.f90  IMP_power_header.f90  IMP_re_input_global.f90  IMP_timer.f90
DAISY-git/git/docs/: 1-DAISY理论手册.doc  2-DAISY使用手册.doc  4-DAISY程序手册.doc  input.case  input.coordinate  input.mesh  sample.inp
DAISY-git/git/lib-32bit/hdf5/include/: H5pubconf.h  h5a_provisional.mod  h5d.mod  h5f.mod  h5g.mod  h5im.mod  h5l_provisional.mod  h5lib_provisional.mod  h5lt.mod  h5o.mod  h5r_provisional.mod  h5s.mod  h5t_provisional.mod  h5tb.mod  h5z.mod
DAISY-git/git/lib-32bit/hdf5/lib/: hdf5.lib  hdf5_cpp.lib  hdf5_f90cstub.lib  hdf5_fortran.lib  hdf5_hl.lib  hdf5_hl_cpp.lib  hdf5_hl_f90cstub.lib  hdf5_hl_fortran.lib  hdf5_tools.lib  libhdf5.settings  libhdf5_f90cstub.lib  libhdf5_fortran.lib  libhdf5_hl.lib  libhdf5_hl_cpp.lib  libhdf5_hl_f90cstub.lib  libhdf5_hl_fortran.lib  libhdf5_tools.lib  libszip.lib  libzlib.lib  szip.lib  zlib.lib
DAISY-git/git/lib-32bit/lapack/lib/: lapacke.lib
DAISY-git/git/lib-32bit/mathlib/include/: self_lebedev.mod  self_minpack.mod  self_quadpack.mod  self_spline.mod  self_vode.mod
DAISY-git/git/lib-32bit/mathlib/lib/: mathlib.lib
DAISY-git/git/lib-32bit/refprop/lib/: refprop.lib
DAISY-git/git/lib-32bit/xmlfox/include/: fox_common.mod  fox_dom.mod  fox_m_fsys_abort_flush.mod  fox_m_fsys_array_str.mod  fox_m_fsys_count_parse_input.mod  fox_m_fsys_format.mod  fox_m_fsys_parse_input.mod  fox_m_fsys_realtypes.mod  fox_m_fsys_string.mod  fox_m_fsys_string_list.mod  fox_m_fsys_varstr.mod  fox_m_utils_mtprng.mod  fox_m_utils_uri.mod  fox_m_utils_uuid.mod  fox_sax.mod  fox_utils.mod  fox_wxml.mod  m_common_attrs.mod  m_common_buffer.mod  m_common_charset.mod  m_common_content_model.mod  m_common_element.mod  m_common_elstack.mod  m_common_entities.mod  m_common_entity_expand.mod  m_common_error.mod  m_common_io.mod  m_common_namecheck.mod  m_common_namespaces.mod  m_common_notations.mod  m_common_struct.mod  m_dom_dom.mod  m_dom_error.mod  m_dom_extras.mod  m_dom_parse.mod  m_dom_utils.mod  m_sax_operate.mod  m_sax_parser.mod  m_sax_reader.mod  m_sax_tokenizer.mod  (+5 more)
DAISY-git/git/lib-32bit/xmlfox/lib/: fox_common.lib  fox_dom.lib  fox_fsys.lib  fox_sax.lib  fox_utils.lib  fox_wxml.lib
DAISY-git/git/lib-64bit/hdf5/include/: H5pubconf.h  h5_dble_interface.mod  h5ds.mod  h5e.mod  h5e_provisional.mod  h5f_provisional.mod  h5global.mod  h5lib_provisional.mod  h5lt.mod  h5o.mod  h5p.mod  h5s.mod  h5t.mod
DAISY-git/git/lib-64bit/hdf5/lib/: hdf5.lib  hdf5_cpp.lib  hdf5_f90cstub.lib  hdf5_fortran.lib  hdf5_hl.lib  hdf5_hl_cpp.lib  hdf5_hl_f90cstub.lib  hdf5_hl_fortran.lib  hdf5_tools.lib  libhdf5.settings  libhdf5_f90cstub.lib  libhdf5_fortran.lib  libhdf5_hl.lib  libhdf5_hl_cpp.lib  libhdf5_hl_f90cstub.lib  libhdf5_hl_fortran.lib  libhdf5_tools.lib  libszip.lib  libzlib.lib  szip.lib  zlib.lib
DAISY-git/git/lib-64bit/mathlib/include/: self_lebedev.mod  self_minpack.mod  self_quadpack.mod  self_spline.mod  self_vode.mod
DAISY-git/git/lib-64bit/mathlib/lib/: mathlib.lib
DAISY-git/git/lib-64bit/refprop/lib/: refprop.lib
DAISY-git/git/lib-64bit/xmlfox/include/: fox_common.mod  fox_dom.mod  fox_m_fsys_abort_flush.mod  fox_m_fsys_array_str.mod  fox_m_fsys_count_parse_input.mod  fox_m_fsys_format.mod  fox_m_fsys_parse_input.mod  fox_m_fsys_realtypes.mod  fox_m_fsys_string.mod  fox_m_fsys_string_list.mod  fox_m_fsys_varstr.mod  fox_m_utils_mtprng.mod  fox_m_utils_uri.mod  fox_m_utils_uuid.mod  fox_sax.mod  fox_utils.mod  fox_wxml.mod  m_common_attrs.mod  m_common_buffer.mod  m_common_charset.mod  m_common_content_model.mod  m_common_element.mod  m_common_elstack.mod  m_common_entities.mod  m_common_entity_expand.mod  m_common_error.mod  m_common_io.mod  m_common_namecheck.mod  m_common_namespaces.mod  m_common_notations.mod  m_common_struct.mod  m_dom_dom.mod  m_dom_error.mod  m_dom_extras.mod  m_dom_parse.mod  m_dom_utils.mod  m_sax_operate.mod  m_sax_parser.mod  m_sax_reader.mod  m_sax_tokenizer.mod  (+5 more)
DAISY-git/git/lib-src/lapack/: CMakeLists.txt
DAISY-git/git/lib-src/mathlib/: CMakeLists.txt  self_lebedev.f90  self_minpack.f90  self_quadpack.f90  self_spline.f90  self_vode.f90
DAISY-git/git/lib-src/refprop/: CMakeLists.txt  cmns.for  core_anc.for  core_de.for  core_mlt.for  core_pr.for  core_stn.for  flash2.for  flsh_sub.for  mix_aga8.for  prop_sub.for  sat_sub.for  setup.for  setup2.for  trns_ecs.for  trnsp.for  utility.for
DAISY-git/git/src/: dependence.inc  dependence.py
DAISY-git/git/src/IMPC/: IMP_assembly_header.f90  IMP_assm_global.f90  IMP_assm_header.f90  IMP_driving_cal_transient.f90  IMP_property_header.f90  IMP_re_input_header.f90  IMP_th_interface.f90  TH2NK_interface_IMP.f90
DAISY-git/git/src/IMPC2/: IMP_assembly_header.f90  IMP_assm_global.f90  IMP_assm_header.f90  IMP_driving_cal_steady.f90  IMP_driving_output.f90  IMP_driving_pre_process.f90  IMP_mathkerel.f90  IMP_power_header.f90  IMP_property_header.f90  IMP_re_input_global.f90  IMP_re_input_header.f90  IMP_single_channel.f90  IMP_single_kernel.f90  IMP_test_TH2NK_steady.f90  IMP_timer.f90  TH2NK_interface_IMP.f90
DAISY-git/git/src/NK2solver/: feedback.f90  process_theta.f90  transit_to_solver.f90
DAISY-git/git/src/driver/: DAISY.f90  driver_post_process.f90  driver_pre_process.f90  driver_steady.f90  driver_transient_pcqs.f90  driver_transient_pk.f90  driver_transient_theta.f90
DAISY-git/git/src/frame/: command_line.f90  constants.f90
DAISY-git/git/src/header/: detector_header.f90  state_header.f90
DAISY-git/git/src/inout/: input_driver.f90  input_keyword.f90  input_plain.f90  output_main.f90  output_timelist.f90  output_visit.f90
DAISY-git/git/src/solver/: coefficient_header_transverse.f90  iteration_control.f90  iteration_initialize.f90  iteration_process.f90
DAISY-git/git/src/thermal/: TH2NK_interface_self.f90  gth_geometry_header.f90  gth_thermal_header.f90  th_check_model_water.f90  th_pre_process.f90
(+159 files in other folders)
